Designファイルの作成とgo generateの実行
